<resources>
    <string name="app_name">Bookey</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_image">Image</string>

    // menu
    <string name="menu_home">Home</string>
    <string name="menu_bookshelf">나만의 책장</string>
    <string name="menu_basket">찜</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_withdrawal">회원탈퇴</string>
    <string name="drawer_open">열림</string>
    <string name="drawer_close">닫힘</string>

    // MainActivity
    <string name="search_hint">도서명으로 검색하세요.</string>
    <string name="bestseller">베스트셀러</string>

    // 카카오로그인
    <string name="kakao_app_key">66585e9795a5b04f09305038a8072150</string>

    // DetailActivity
    <string name="introduction">색과 체 산문집 『만남은 지겹고 이별은 지쳤다』는 챕터 4개로 나누어져 구성되어 있으며 〈사랑을 원하기보다 상처받지 않기를 원해〉, 〈사람이 변하는 게 아니라 변할 사람이 있는 것뿐〉, 〈이별에 다른 변명을 덧붙이지 말기를〉 등 주옥같은 작품을 만나볼 수 있는 책이다.</string>
    <string name="table">"작가의 말

챕터 1. 상처받은 기억에 무너져서는 안 된다
사랑을 원하기보다 상처받지 않기를 원해 / 사람이 변하는 게 아니라 변할 사람이 있는 것뿐 / 이별에 다른 변명을 덧붙이지 말기를 / 의심한다는 건 사실 믿고 싶다는 것이다 / 말로 받은 상처에는 약도 없어요 / 후회는 남은 사람의 몫 / 왜 사랑을 이유로 상처를 주나요 / 자극적이지 않아서 자극적인 것들 / 기대가 적을수록 관계는 좋아진다 / 안녕

챕터 2. 최고의 사랑은 없지만 최선의 사랑은 있다
99%의 인연을 만나는 일에 대하여 / 표현하지 않아도 전달되는 마음은 무관심뿐이다 / 누군가를 이해한다는 건 더 강해진다는 것 / 떠나간 사람을 붙잡는 방법에 정답은 없다 / 재회에 관하여 / 권태기는 이제 헤어져야 한다는 신호일까요? / 다투지 않기 위해서 다툰다 / 선의의 거짓은 없다 / 연애를 많이 겪을수록 멈칫거리게 되는 이유 / 정이 많아 힘든 당신

챕터 3. 이제는 다시 사랑에 빠질 시간
존중한다는 건 / 먼저 사과했다, 잘못해서가 아니라 우리 관계가 소중해서 / 사람은 쉽게 변하지 않지만 사랑은 사람을 변하게 하기도 한다 / 당신이 능동적인 사랑을 했으면 좋겠어요 / 사랑이 끝나고 울어봤다면 / 을의 연애 / 헤어질 각오로 연애하세요 / 사람의 일, 인사 / 누구를 만나느냐에 따라 나 또한 변한다 / 슬퍼한 만큼 성장할 수 있다

챕터 4. 나답게 사랑하자
금방 사랑에 빠지고 싶다 / 사랑의 반대말은 미움이 아니다 / 내가 감당할 수 이쓴 건 내 선택의 결과뿐 / 기쁠 때 약속하지 말자, 외로울 때 사랑하지 말자 / 모든 것을 줄 마음의 준비는 했어도 모든 것을 주지는 마라 / 모두가 바라는 그 하나 / 사랑을 바꿀 순 없어도 내가 변할 순 있다 / 내가 꿈에 그리던 사람은 내가 그런 사람이 됐을 때 곁에 온다 / 내가 제일 소중하다 / 사랑의 숲에서 길을 잃지 않기를

에필로그 : 첫사랑에게"</string>
    <string name="good_title">호감도</string>
    <string name="keyword_title">키워드</string>
    <string name="description_title">책소개</string>
    <string name="list_title">목차</string>
    <string name="basket_checkbox">찜</string>
    <string name="bookshelf_checkbox">내책장</string>
    <string name="like">추천</string>
    <string name="hate">비추천</string>

    // Home Fragment
    <string name="no_data_search">검색된 도서가 없습니다.</string>

    // Bookshelf Fragment
    <string name="record_title">기록하기</string>

    // RecordActivity
    <string name="edit_record">저장하기</string>
    <string name="look_detail">상세보기</string>
</resources>