<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.Bookey.book_android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_bookshelf"
        android:name="com.Bookey.book_android.ui.bookshelf.BookshelfFragment"
        android:label="@string/menu_bookshelf"
        tools:layout="@layout/fragment_bookshelf" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.Bookey.book_android.ui.basket.BasketFragment"
        android:label="@string/menu_basket"
        tools:layout="@layout/fragment_basket" />
</navigation>