<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorMain">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/book_detail_header_padding"
        android:paddingEnd="@dimen/book_detail_header_padding"
        android:background="@color/colorMain">

        <ImageView
            android:id="@+id/detail_book_img"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:src="@drawable/bookimg_ex1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/detail_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_book_img"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/detail_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="만남은 지겹고 이별은 지쳤다"
                android:textColor="@color/colorPoint"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_book_writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="색과 체" />

            <TextView
                android:id="@+id/detail_book_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="출판사" />

            <TextView
                android:id="@+id/detail_book_pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="300페이지" />

            <TextView
                android:id="@+id/detail_book_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12000원"
                android:textColor="@color/colorPoint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_book_img"
            app:layout_constraintTop_toBottomOf="@id/detail_book">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/basket_checkbox"
                    android:layout_width="23dp"
                    android:layout_height="25dp"
                    android:background="@drawable/basket_checkbox"
                    android:button="@null"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/basket_checkbox"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/bookshelf_checkbox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/heart_checkbox"
                    android:button="@null"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/bookshelf_checkbox"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_title"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPoint"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/detail_progress"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:progress="7000"
                android:max="10000"
                android:progressDrawable="@drawable/progressbar"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/detail_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="12dp"/>
                <TextView
                    android:id="@+id/detail_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="12dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keyword_title"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPoint"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/detail_keyword_img"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_title"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/colorPoint"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>